--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 /*
-Theme Name: Baseline
-Theme URI: https://github.com/pressbooks/pressbooks-baseline
+Theme Name: Buckram
+Theme URI: https://github.com/pressbooks/pressbooks-buckram
 Description: A theme for testing Buckram baseline styles.
 Author: Pressbooks (Book Oven Inc.)
 Author URI: https://pressbooks.org
 License: GPL v3 or later
 Version: 1.0
-Text Domain: pressbooks-baseline
+Text Domain: pressbooks-buckram
 Template: pressbooks-book
-Github Theme URI: pressbooks/pressbooks-baseline
+Github Theme URI: pressbooks/pressbooks-buckram
 */
 
 /* This doesn't do anything. */
